syntax = "proto3";

option csharp_namespace = "MessageContract.Worker";

import "google/protobuf/timestamp.proto";
package worker;

service Worker {
  rpc CreateExcelStream (stream Batch) returns (stream DataChunk);
}
message Batch{
    int32 batchNumber = 1;
    repeated BatchData dataSet = 2;
}

message BatchData {
    string id = 1;
    string name = 2;
    string description = 3;
    google.protobuf.Timestamp updatedDate = 4;
    google.protobuf.Timestamp createdDate = 5;
}

message DataChunk {
   bytes chunk = 4;
}
